Hemos empezado la localización de los mensajes con parametros en music_basic.py (vamos por el comando /skip)
(la localización de mensajes de music_advanced.py ya está hecha)

--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -31,6 +31,19 @@
     "cmd.seek.seeked_no_url.response": "Seeked: `{0} - {1}`",
     "cmd.queue.now_playing_url.response": "[`{0} - {1}`](<{2}>) | {3} (Second {4})",
     "cmd.queue.now_playing_no_url.response": "`{0} - {1}` | {2} (Second {3})",
+    "cmd.queue.now_playing_queue.response": "Now playing: {0}\\n\\n{1}",
+    "cmd.remove.removed_url.response": "Removed: [`{0} - {1}`](<{2}>)",
+    "cmd.remove.removed_no_url.response": "Removed: `{0} - {1}`",
+    "cmd.swap.swapped.response": "Swapped {0} with {1}",
+    "cmd.loop_start.starting_loop_url.response": "Starting the loop on track: [`{0} - {1}`](<{2}>)",
+    "cmd.loop_start.starting_loop_no_url.response": "Starting the loop on track: `{0} - {1}`",
+    "cmd.loop_end.ending_loop_url.response": "Ending the loop on track: [`{0} - {1}`](<{2}>)",
+    "cmd.loop_end.ending_loop_no_url.response": "Ending the loop on track: `{0} - {1}`",
+    "cmd.join.channel_id.response": "Joined <#{0}>",
+    "cmd.play.added_to_queue_url.response": "Added to queue: [`{0} - {1}`](<{2}>)",
+    "cmd.play.added_to_queue_no_url.response": "Added to queue: `{0} - {1}`",
+    "cmd.play.added_playlist_to_queue.response": "Added playlist to queue: `{0}`",
+    "cmd.skip.skipped_url.response": "Skipped: [`{0} - {1}`](<{2}>)",
 
     "cmd.error.no_voice.response": "The bot is not connected to a voice channel",
     "error.response": "Error"
