--- a/localization/es-ES.json
+++ b/localization/es-ES.json
@@ -31,6 +31,19 @@
     "cmd.seek.seeked_no_url.response": "Buscado: `{0} - {1}`",
     "cmd.queue.now_playing_url.response": "[`{0} - {1}`](<{2}>) | {3} (Segundo {4})",
     "cmd.queue.now_playing_no_url.response": "`{0} - {1}` | {2} (Segundo {3})",
+    "cmd.queue.now_playing_queue.response": "Reproduciendo ahora: {0}\\n\\n{1}",
+    "cmd.remove.removed_url.response": "Borrado: [`{0} - {1}`](<{2}>)",
+    "cmd.remove.removed_no_url.response": "Borrado: `{0} - {1}`",
+    "cmd.swap.swapped.response": "Intercambiado {0} por {1}",
+    "cmd.loop_start.starting_loop_url.response": "Iniciando el bucle en la canción: [`{0} - {1}`](<{2}>)",
+    "cmd.loop_start.starting_loop_no_url.response": "Iniciando el bucle en la canción: `{0} - {1}`",
+    "cmd.loop_end.ending_loop_url.response": "Finalizando el bucle en la canción: [`{0} - {1}`](<{2}>)",
+    "cmd.loop_end.ending_loop_no_url.response": "Finalizando el bucle en la canción: `{0} - {1}`",
+    "cmd.join.channel_id.response": "Te has unido a <#{0}>",
+    "cmd.play.added_to_queue_url.response": "Añadido a la cola: [`{0} - {1}`](<{2}>)",
+    "cmd.play.added_to_queue_no_url.response": "Añadido a la cola: `{0} - {1}`",
+    "cmd.play.added_playlist_to_queue.response": "Lista de reproducción añadida a la cola: `{0}`",
+    "cmd.skip.skipped_url.response": "Saltado: [`{0} - {1}`](<{2}>)",
 
     "cmd.error.no_voice.response": "No estoy conectado a un canal de voz",
     "error.response": "Error"
