--- a/localization/es-ES.json
+++ b/localization/es-ES.json
@@ -44,7 +44,12 @@
     "cmd.play.added_to_queue_no_url.response": "Añadido a la cola: `{0} - {1}`",
     "cmd.play.added_playlist_to_queue.response": "Lista de reproducción añadida a la cola: `{0}`",
     "cmd.skip.skipped_url.response": "Saltado: [`{0} - {1}`](<{2}>)",
+    "cmd.skip.skipped_no_url.response": "Saltado: `{0} - {1}`",
+    "cmd.stop.stopped_url.response": "Parado: [`{0} - {1}`](<{2}>)",
+    "cmd.stop.stopped_no_url.response": "Parado: `{0} - {1}`",
 
     "cmd.error.no_voice.response": "No estoy conectado a un canal de voz",
-    "error.response": "Error"
+    "error.response": "Error",
+
+    "event.track_start_url.response": "Iniciada la reproducción de [`{0} - {1}`](<{2}>)"
 }
