--- a/localization/es-ES.json
+++ b/localization/es-ES.json
@@ -31,7 +31,7 @@
     "cmd.seek.seeked_no_url.response": "Buscado: `{0} - {1}`",
     "cmd.queue.now_playing_url.response": "[`{0} - {1}`](<{2}>) | {3} (Segundo {4})",
     "cmd.queue.now_playing_no_url.response": "`{0} - {1}` | {2} (Segundo {3})",
-    "cmd.queue.now_playing_queue.response": "Reproduciendo ahora: {0}\\n\\n{1}",
+    "cmd.queue.now_playing_queue.response": "Reproduciendo ahora: {0}\n\n{1}",
     "cmd.remove.removed_url.response": "Borrado: [`{0} - {1}`](<{2}>)",
     "cmd.remove.removed_no_url.response": "Borrado: `{0} - {1}`",
     "cmd.swap.swapped.response": "Intercambiado {0} por {1}",
