Ya no hay errores y los mensajes ya están localizados (a veces los comandos no van por culpa de discord)

--- a/localization/es-ES.json
+++ b/localization/es-ES.json
@@ -32,8 +32,8 @@
     "cmd.queue.now_playing_url.response": "[`{0} - {1}`](<{2}>) | {3} (Segundo {4})",
     "cmd.queue.now_playing_no_url.response": "`{0} - {1}` | {2} (Segundo {3})",
     "cmd.queue.now_playing_queue.response": "Reproduciendo ahora: {0}\n\n{1}",
-    "cmd.remove.removed_url.response": "Borrado: [`{0} - {1}`](<{2}>)",
-    "cmd.remove.removed_no_url.response": "Borrado: `{0} - {1}`",
+    "cmd.remove.removed_url.response": "Quitado de la cola: [`{0} - {1}`](<{2}>)",
+    "cmd.remove.removed_no_url.response": "Quitado de la cola: `{0} - {1}`",
     "cmd.swap.swapped.response": "Intercambiado {0} por {1}",
     "cmd.loop_start.starting_loop_url.response": "Iniciando el bucle en la canción: [`{0} - {1}`](<{2}>)",
     "cmd.loop_start.starting_loop_no_url.response": "Iniciando el bucle en la canción: `{0} - {1}`",
