--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -47,9 +47,12 @@
     "cmd.skip.skipped_no_url.response": "Skipped: `{0} - {1}`",
     "cmd.stop.stopped_url.response": "Stopped: [`{0} - {1}`](<{2}>)",
     "cmd.stop.stopped_no_url.response": "Stopped: `{0} - {1}`",
+    "cmd.play.yt-dlp.unknown_title": "Unknown title",
+    "cmd.play.yt-dlp.unknown_artist": "Unknown artist",
 
     "cmd.error.no_voice.response": "The bot is not connected to a voice channel",
     "error.response": "Error",
+    "cmd.play.url_not_supported": "URL not supported",
 
     "event.track_start_url.response": "Started playing [`{0} - {1}`](<{2}>)",
     "event.track_start_no_url.response": "Started playing `{0} - {1}`"
