Estamos poniendo el request en todos los comandos y localizaciones (hay que arreglar errores)

--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -57,5 +57,6 @@
     "event.track_start_url.response": "Started playing [`{0} - {1}`](<{2}>) | Requested by <@!{3}>",
     "event.track_start_no_url.response": "Started playing `{0} - {1}` | Requested by <@!{3}>",
     "cmd.queue.queue_text_info_url.response": "{0} -> [`{1} - {2}`](<{3}>), Requested by <@!{4}>\\n",
-    "cmd.queue.queue_text_info_no_url.response": "{0} -> `{1} - {2}`, Requested by <@!{3}>\\n"
+    "cmd.queue.queue_text_info_no_url.response": "{0} -> `{1} - {2}`, Requested by <@!{3}>\\n",
+    "cmd.swap.track_info_url.response": "[`{0} - {1}`](<{2}>), Requested by <@!{3}>\\n"
 }
