He mejorado las localizaciones, ahora hace lo mismo con menos mensajes. Falta poner los cambios en music_basic.py

--- a/localization/en-US.json
+++ b/localization/en-US.json
@@ -23,30 +23,21 @@
     "cmd.stop.nothing_stop.response": "Nothing to stop",
 
 
-    "cmd.pause.paused_url.response": "Paused: [`{0} - {1}`](<{2}>)",
-    "cmd.pause.paused_no_url.response": "Paused: `{0} - {1}`",
-    "cmd.resume.resumed_url.response": "Resumed: [`{0} - {1}`](<{2}>)",
-    "cmd.resume.resumed_no_url.response": "Resumed: `{0} - {1}`",
-    "cmd.seek.seeked_url.response": "Seeked: [`{0} - {1}`](<{2}>)",
-    "cmd.seek.seeked_no_url.response": "Seeked: `{0} - {1}`",
+    "cmd.pause.paused.response": "Paused: {0}",
+    "cmd.resume.resumed.response": "Resumed: {0}",
+    "cmd.seek.seeked.response": "Seeked: {0}",
     "cmd.queue.now_playing_url.response": "[`{0} - {1}`](<{2}>) | {3} (Second {4}), Requested by <@!{5}>",
     "cmd.queue.now_playing_no_url.response": "`{0} - {1}` | {2} (Second {3}), Requested by <@!{4}>",
     "cmd.queue.now_playing_queue.response": "Now playing: {0}\n\n{1}",
-    "cmd.remove.removed_url.response": "Removed: [`{0} - {1}`](<{2}>), Requested by <@!{3}>",
-    "cmd.remove.removed_no_url.response": "Removed: `{0} - {1}`, Requested by <@!{3}>",
+    "cmd.remove.removed.response": "Removed: {0}",
     "cmd.swap.swapped.response": "Swapped {0} with {1}",
-    "cmd.loop_start.starting_loop_url.response": "Starting the loop on track: [`{0} - {1}`](<{2}>)",
-    "cmd.loop_start.starting_loop_no_url.response": "Starting the loop on track: `{0} - {1}`",
-    "cmd.loop_end.ending_loop_url.response": "Ending the loop on track: [`{0} - {1}`](<{2}>)",
-    "cmd.loop_end.ending_loop_no_url.response": "Ending the loop on track: `{0} - {1}`",
+    "cmd.loop_start.starting_loop.response": "Starting the loop on track: {0}",
+    "cmd.loop_end.ending_loop.response": "Ending the loop on track: {0}",
     "cmd.join.channel_id.response": "Joined <#{0}>",
-    "cmd.play.added_to_queue_url.response": "Added to queue: [`{0} - {1}`](<{2}>)",
-    "cmd.play.added_to_queue_no_url.response": "Added to queue: `{0} - {1}`",
+    "cmd.play.added_to_queue.response": "Added to queue: {0}",
     "cmd.play.added_playlist_to_queue.response": "Added playlist to queue: `{0}`",
-    "cmd.skip.skipped_url.response": "Skipped: [`{0} - {1}`](<{2}>)",
-    "cmd.skip.skipped_no_url.response": "Skipped: `{0} - {1}`",
-    "cmd.stop.stopped_url.response": "Stopped: [`{0} - {1}`](<{2}>)",
-    "cmd.stop.stopped_no_url.response": "Stopped: `{0} - {1}`",
+    "cmd.skip.skipped.response": "Skipped: {0}",
+    "cmd.stop.stopped.response": "Stopped: {0}",
     "cmd.play.yt-dlp.unknown_title": "Unknown title",
     "cmd.play.yt-dlp.unknown_artist": "Unknown artist",
 
@@ -54,9 +45,9 @@
     "error.response": "Error",
     "cmd.play.url_not_supported": "URL not supported",
 
-    "event.track_start_url.response": "Started playing [`{0} - {1}`](<{2}>) | Requested by <@!{3}>",
-    "event.track_start_no_url.response": "Started playing `{0} - {1}` | Requested by <@!{3}>",
-    "cmd.queue.queue_text_info_url.response": "{0} -> [`{1} - {2}`](<{3}>), Requested by <@!{4}>\\n",
-    "cmd.queue.queue_text_info_no_url.response": "{0} -> `{1} - {2}`, Requested by <@!{3}>\\n",
-    "cmd.swap.track_info_url.response": "[`{0} - {1}`](<{2}>), Requested by <@!{3}>\\n"
+    "event.track_start.response": "Started playing {0}",
+    "cmd.queue.queue_text_info.response": "{0} -> {1}\\n",
+
+    "generic.track_info_url": "[`{0} - {1}`](<{2}>) | Requested by <@!{3}>",
+    "generic.track_info_no_url": "`{0} - {1}` | Requested by <@!{3}>"
 }
